Checkpoint work on lit review

--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -446,3 +446,62 @@
   year={2012},
   publisher={Springer}
 }
+
+@misc{adenine2016pubchem,
+  title = {{National Center for Biotechnology Information}},
+  howpublished = {\url{https://pubchem.ncbi.nlm.nih.gov/compound/6083}},
+  note = {{PubChem} Compound Database; CID=6083, Accessed May 17, 2016}
+}
+
+@article{ya2014rna,
+  title={RNA structure prediction: Progress and perspective},
+  author={Ya-Zhou, Shi and Yuan-Yan, Wu and Feng-Hua, Wang and Zhi-Jie, Tan},
+  journal={Chinese Physics B},
+  volume={23},
+  number={7},
+  pages={078701},
+  year={2014},
+  publisher={IOP Publishing}
+}
+
+@book{schlick2010molecular,
+  title={Molecular modeling and simulation: an interdisciplinary guide: an interdisciplinary guide},
+  author={Schlick, Tamar},
+  volume={21},
+  year={2010},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{darty2009varna,
+  title={VARNA: Interactive drawing and editing of the RNA secondary structure},
+  author={Darty, K{\'e}vin and Denise, Alain and Ponty, Yann},
+  journal={Bioinformatics},
+  volume={25},
+  number={15},
+  pages={1974--1975},
+  year={2009},
+  publisher={Oxford Univ Press}
+}
+
+@book{neidle2010principles,
+  title={Principles of nucleic acid structure},
+  author={Neidle, Stephen},
+  year={2010},
+  publisher={Academic Press}
+}
+
+
+@article{Olson2001229,
+	Author = {Wilma K Olson and Manju Bansal and Stephen K Burley and Richard E Dickerson and Mark Gerstein and Stephen C Harvey and Udo Heinemann and Xiang-Jun Lu and Stephen Neidle and Zippora Shakked and Heinz Sklenar and Masashi Suzuki and Chang-Shung Tung and Eric Westhof and Cynthia Wolberger and Helen M Berman},
+	Doi = {http://dx.doi.org/10.1006/jmbi.2001.4987},
+	Issn = {0022-2836},
+	Journal = {Journal of Molecular Biology},
+	Keywords = {standard reference frame},
+	Number = {1},
+	Pages = {229 - 237},
+	Title = {A standard reference frame for the description of nucleic acid base-pair geometry12},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0022283601949873},
+	Volume = {313},
+	Year = {2001},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0022283601949873},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1006/jmbi.2001.4987}}
